--- a/index4.html
+++ b/index4.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<script src="js/modernizr.custom.63321.js"></script>
 	</head>
-	<body>
+	<body id="body">
   <div class="input-group-prepend">
   </div>
   <input type="text" class="form-control" placeholder="Enter Hashtag Or Words" aria-label="Username" aria-describedby="basic-addon1">
