--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+    <head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Card</title>
-		<meta name="description" content="Custom Login Form Styling with CSS3" />
-		<meta name="keywords" content="css3, login, form, custom, input, submit, button, html5, placeholder" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <title>Login</title>
+        <meta name="description" content="Custom Login Form Styling with CSS3" />
+        <meta name="keywords" content="css3, login, form, custom, input, submit, button, html5, placeholder" />
+        <meta name="author" content="Codrops" />
+        <link rel="shortcut icon" href="../favicon.ico"> 
+        <link rel="stylesheet" type="text/css" href="public/css/style.css" />
 		<script src="js/modernizr.custom.63321.js"></script>
-	</head>
-	<body id="body">
-  <div class="input-group-prepend">
-  </div>
-  <input type="text" class="form-control" placeholder="Enter Hashtag Or Words" aria-label="Username" aria-describedby="basic-addon1">
-
-
-  <div id="taglist">skldhflksdjglkjndflökgjlkdfjglkdjflgkhjdlhjkdfhgishdrglkhsdflighöskdfhgökjsdhgölksdhfgökjshdfölkghsldfkgjldgjkdfhjkdfhgishdrglkhsdflighöskdfhgökjsdhgölksdhfgökjshdfölkghsldfkgjldgjkdf</div>
-
-
-	</body>
+		<!--[if lte IE 7]><style>.main{display:none;} .support-note .note-ie{display:block;}</style><![endif]-->
+		<style>
+			@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+			body {
+				background: #563c55 url(images/TONbg.jpg) no-repeat center top;
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				background-size: cover;
+			}
+			.container > header h1,
+			.container > header h2 {
+				color: #fff;
+				text-shadow: 0 1px 1px rgba(0,0,0,0.7);
+			}
+		</style>
+    </head>
+    <body>
+				<div class="container">
+			<section class="main">
+				<form class="form-3" action="admin.html">
+				    <p class="clearfix">
+				        <label for="login"></label>
+				        <input type="text" name="login" id="login" placeholder="Username">
+				    </p>
+				    <p class="clearfix">
+				        <label for="password"></label>
+				        <input type="password" name="password" id="password" placeholder="Password"> 
+				    </p>
+				    <p class="clearfix">
+				        <input type="submit" name="submit" value="Sign in">
+				    </p>       
+				</form>​
+			</section>
+		</body>
 </html>
