fixing-path-problem

--- a/public/admin.html
+++ b/public/admin.html
@@ -25,7 +25,7 @@
     <!-- Bootstrap icons  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
-      <head>
+      </head>
           <body>
               <div id="main">
                   <div class="container">
@@ -94,4 +94,4 @@
               <!-- Main Javascript File  -->
               <script type="text/javascript" src="public/js/scripts.js"></script>
           </body>
-      </head>
+      </html>
